--- a/index.html
+++ b/index.html
@@ -49,15 +49,10 @@
 
 <p>图解</p>
 <p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
-
-
-    
-    <li><a href="liruida.github.io/ps2tuoceng.html 
+<h4>其它文章：</h4> 
+  <li><a href="liruida.github.io/ps2tuoceng.html 
 ">PS图层操作</a></li>
-    
- 
-
-  </body>
+    </body>
 </html>
  
 &nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;
