--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
 <h4>其它文章：</h4> 
   <li><a href="liruida.github.io/ps2tuoceng.html 
-">PS图层操作</a></li>
+">PS层次2~~图层操作</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
