--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>2.本博客主要讲述PS图层操作  包含以下内容</p>
+   <p>本博客主要讲述PS图层操作  包含以下内容</p>
 
 <ol>
 <li>1.图层基本概念</li>
@@ -51,6 +51,8 @@
 <p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
   
  <h4>其它文章：</h4> 
+  <li><a href="https://ke.qq.com/webcourse/index.html#course_id=174436&term_id=100204584&taid=1027618170382692&vid=b1414hhf6ll
+">说明：本PS教程引用的视频教程 </a></li>
   <li><a href="liruida.github.io/index.html 
 ">GitHub教程</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
