--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -20,9 +20,15 @@
 
 
 
-<h3 id="继承">本地文件上传至GitHub：</h3>
+  <h3 id="继承"><p>1.认识图层面板</p>
+                <p>2.了解图层概念</p>
+                <p>3.常见图层分类</p>
+                <p>图层基本操作</p>
+                <p>图层面板设置</p>
+</h3>
 
-<p>在创建一个仓库时，如果需要本地文件，照片文档等，操作者会发现是无法直接在GitHub上直接上传的，是因为为安全起见，网站服务器是无法直接访问本地电脑的</p>
+<p>1.1.认识图层面板
+  </p>
 
 
 
