--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -23,11 +23,11 @@
   <h3 id="继承"><p>1.认识图层面板</p>
                 <p>2.了解图层概念</p>
                 <p>3.常见图层分类</p>
-                <p>图层基本操作</p>
-                <p>图层面板设置</p>
+                <p>4.图层基本操作</p>
+                <p>5.图层面板设置</p>
 </h3>
 
-<p>1.1.认识图层面板
+<p>1.认识图层面板:
   </p>
 
 
