--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -27,34 +27,44 @@
                 <p>5.图层面板设置</p>
 </h3>
 
-<p>1.认识图层面板:
+<p>
   </p>
 
 
 
 <h2 id="2初始化和类的加载">2、平移和缩放</h2>
+<h3 id="继承"><p>1.抓手工具</p>
+                <p>2.缩放工具
+</p>
+                <p>3.相关快捷命令</p>
+</h3>
+<p></p>
 
-<p>使用git工具用命令行一步一步将所需要的文件提到远程仓库中</p>
+<p></p>
 
-<p>从上述来看，首先需要在本地下载git，下载完毕后，任意选择盘符，建立文件夹，鼠标右键右下方选择 git bash here，弹出命令行窗口</p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 
-<p>接下来进行代码操作：</p>
-<p>1.$ cd 文件名  表示进入文件夹下，</p>
-<p>2.git init</p>
-<p>3.git status</p>
+<p></p>
+<p></p>
+<p> </p>
+<p></p>
 
-<p>4.git add 所需要上传的文件</p>
-<p>5.git commit -m "第一次提交"</p>
-<p> 6.git remote add origin URL（自己仓库的URL）</p>
-<p>7.git push origin master</p>
-
-<p>git status表示查看状态，新手要经常使用</p>
+<p></p>
 
 
 <h2 id="3final关键字">3、移动工具</h2>
 
-<p>图解</p>
-<p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
+ <h3 id="继承"><p>1.移动工具详细用法</p>
+                <p>2.移动图层对象的快捷键组合
+</p>
+                <p>3.图层对象的对齐和分布
+</p>
+                
+</h3>
+
   
  <h4>其它文章：</h4> 
   <li><a href="https://ke.qq.com/webcourse/index.html#course_id=174436&term_id=100204584&taid=1027618170382692&vid=b1414hhf6ll
