--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -8,9 +8,9 @@
    <p>本博客主要讲述PS图层操作  包含以下内容</p>
 
 <ol>
-<li>1.图层基本概念</li>
-<li>2.平移和缩放</li>
-<li>3.移动工具</li>
+<li>图层基本概念</li>
+<li>平移和缩放</li>
+<li>移动工具</li>
 
 </ol>
 
@@ -20,11 +20,11 @@
 
 
 
-  <h3 id="继承"><p>1.认识图层面板</p>
-                <p>2.了解图层概念</p>
-                <p>3.常见图层分类</p>
-                <p>4.图层基本操作</p>
-                <p>5.图层面板设置</p>
+  <h3 id="继承"><p>1.1.认识图层面板</p>
+                <p>1.2.了解图层概念</p>
+                <p>1.3.常见图层分类</p>
+                <p>1.4.图层基本操作</p>
+                <p>1.5.图层面板设置</p>
 </h3>
 
 <p>
@@ -33,10 +33,10 @@
 
 
 <h2 id="2初始化和类的加载">2、平移和缩放</h2>
-<h3 id="继承"><p>1.抓手工具</p>
-                <p>2.缩放工具
+<h3 id="继承"><p>2.1.抓手工具</p>
+                <p>2.2.缩放工具
 </p>
-                <p>3.相关快捷命令</p>
+                <p>2.3.相关快捷命令</p>
 </h3>
 <p></p>
 
@@ -57,10 +57,10 @@
 
 <h2 id="3final关键字">3、移动工具</h2>
 
- <h3 id="继承"><p>1.移动工具详细用法</p>
-                <p>2.移动图层对象的快捷键组合
+ <h3 id="继承"><p>3.1.移动工具详细用法</p>
+                <p>3.2.移动图层对象的快捷键组合
 </p>
-                <p>3.图层对象的对齐和分布
+                <p>3.3.图层对象的对齐和分布
 </p>
                 
 </h3>
