--- a/webHTML.html
+++ b/webHTML.html
@@ -1,1 +1,71 @@
-Hello World
+<html>
+  <head>
+    <meta charset="utf-8">
+  
+</head>
+<body bgcolor="cccccc">
+
+   <p>本博客包含以下内容 有待书写</p>
+
+<ol>
+<li> </li>
+<li> </li>
+<li> </li>
+
+</ol>
+
+
+
+<h2 id="1基本定义">1、 </h2>
+
+
+
+<h3 id="继承"> </h3>
+
+<p> </p>
+
+
+
+<h2 id="2初始化和类的加载">2、 </h2>
+
+<p> </p>
+
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p>  （自己仓库的URL）</p>
+<p> </p>
+
+<p> </p>
+
+
+<h2 id="3final关键字">3、 </h2>
+
+<p> </p>
+ 
+<h4>其它文章：</h4> 
+  <li><a href="liruida.github.io/webCSS.html
+ 
+">web开发CSS要点总结</a></li>
+  <li><a href="liruida.github.io/ps2tuoceng.html 
+">PS层次2~~图层操作</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    </body>
+</html>
+
+
+
+
+ 
+
+
