--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -69,9 +69,9 @@
  <h4>其它文章：</h4> 
   <li><a href="https://ke.qq.com/webcourse/index.html#course_id=174436&term_id=100204584&taid=1027618170382692&vid=b1414hhf6ll
 ">说明：本PS教程引用的视频教程 </a></li> 
-  <li><a href="liruida.github.io/webHTML.html
+  <li><a href="https://liruida.github.io/webHTML.html
  ">web开发HTML要点总结</a></li>
-   <li><a href="liruida.github.io/index.html 
+   <li><a href="https://liruida.github.io/index.html 
 ">GitHub教程</a></li>
   <li><a href="https://ke.qq.com/webcourse/index.html#course_id=220579&term_id=100260530&taid=1342993324006819&vid=u1419ol7kkw 
 ">hadoop软件的实验环境和大数据基础知识
