--- a/webCSS.html
+++ b/webCSS.html
@@ -50,10 +50,10 @@
 <p> </p>
  
 <h4>其它文章：</h4> 
-  <li><a href="liruida.github.io/webHTML.html
+  <li><a href="https://liruida.github.io/webHTML.html
  
 ">web开发HTML要点总结</a></li>
-  <li><a href="liruida.github.io/ps2tuoceng.html 
+  <li><a href="https://liruida.github.io/liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
