--- a/webHTML.html
+++ b/webHTML.html
@@ -39,7 +39,7 @@
 
 <p> </p>
 <p> </p>
-<p>  （自己仓库的URL）</p>
+<p> </p>
 <p> </p>
 
 <p> </p>
@@ -55,6 +55,9 @@
 ">web开发CSS要点总结</a></li>
   <li><a href="liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
+  
+  <li><a href="http://www.w3school.com.cn/ 
+">w3c官网发布标签</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
