--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 <p>图解</p>
 <p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
 <h4>其它文章：</h4> 
-  <li><a href="liruida.github.io/ps2tuoceng.html 
+  <li><a href="https://liruida.github.io/liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
+  
+  <li><a href="http://lib.csdn.net/base/javase 
+">Java SE知识库</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
