--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -71,6 +71,9 @@
 ">说明：本PS教程引用的视频教程 </a></li> 
   <li><a href="https://liruida.github.io/webHTML.html
  ">web开发HTML要点总结</a></li>
+   <li><a href="liruida.github.io/webCSS.html
+ 
+">web开发CSS要点总结</a></li>
    <li><a href="https://liruida.github.io/index.html 
 ">GitHub教程</a></li>
   
