--- a/webHTML.html
+++ b/webHTML.html
@@ -50,10 +50,10 @@
 <p> </p>
  
 <h4>其它文章：</h4> 
-  <li><a href="liruida.github.io/webCSS.html
+  <li><a href="https://liruida.github.io/webCSS.html
  
 ">web开发CSS要点总结</a></li>
-  <li><a href="liruida.github.io/ps2tuoceng.html 
+  <li><a href="https://liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
   
   <li><a href="http://www.w3school.com.cn/ 
