--- a/webCSS.html
+++ b/webCSS.html
@@ -57,12 +57,13 @@
 ">PS层次2~~图层操作</a></li>
   
   <li><a href="https://ke.qq.com/webcourse/index.html#course_id=220579&term_id=100260530&taid=1342993324006819&vid=u1419ol7kkw 
-">hadoop软件的实验环境和大数据基础知识</a></li>
+">hadoop软件的实验环境和大数据基础知识</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.zhaikexueyuan.com/sub/Hadoop/from_banner.html>hadoop学习路线</a></li>
    <li><a href="https://ke.qq.com/webcourse/index.html#course_id=226302&term_id=100267148&taid=1374299340633086&vid=t1419mopvmh
 ">学好大数据“短-平-快”的学习路线</a></li>
  <li><a href="https://ke.qq.com/webcourse/index.html#course_id=224362&term_id=100264899&taid=1372203396590698&vid=a14190fgprc
 ">案例剖析大数据必备基础知识</a></li>
-  
+  <li><a href="http://mp.weixin.qq.com/s/_ETnTmIQMuYQ7ftte7MQvQ
+">思维导图学Linux</a></li>
  <li><a href="#
     ">GitHub登录 https://github.com/用户名</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
