--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <h4>其它文章：</h4> 
   <li><a href="https://liruida.github.io/liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
+   <li><a href="https://liruida.github.io/linux-redhat/
+">Linux服务器安装过程</a></li>
   
   <li><a href="http://lib.csdn.net/base/javase 
 ">Java SE知识库</a></li>
