--- a/linux1.html
+++ b/linux1.html
@@ -8,33 +8,28 @@
    <p>本博客主要讲述Linux服务器 redhat的安装过程</p>
 
 <ol>
-<li> </li>
-<li> </li>
-<li> </li>
+<li>新建虚拟机 </li>
+<li>镜像法安装Linux，将LinuxDVD安转入虚拟机</li>
+<li>开机安装</li>
 
 </ol>
 
 
 
-<h2 id="1基本定义">1、 </h2>
+<h2 id="1基本定义">1、新建虚拟机 </h2>
 
 
 
 <h3 id="继承"> </h3>
 
-<p> </p>
+<p> 打开VM——file——newvirtualmachine——typical——next——I will install the operating system later（镜像文件稍后安装）--next——Linux，version：redHATenterprisonLinux5——给虚拟机取名字为redHAT，选择路径安装——next——给定8.0G，splitvirtualdiskintomultplefiles（8个G按需分配不直接一下全部分配）——next，fish</p>
 
 
 
-<h2 id="2初始化和类的加载">2、 </h2>
+<h2 id="2初始化和类的加载">2、 镜像法安装Linux，将LinuxDVD安转入虚拟机</h2>
 
-<p> </p>
+<p>在虚拟机redHAT5中，点击CD/DVD（IDE）auto detect——use ISO image file，browse——寻找到ISO文件【红帽企业 Linux5】TLFsoft redhat enterprise.Linux5.update2XISO.ISO（路径文件名最好为英文）——OK </p>
 
-<p> </p>
-
-<p> </p>
-<p> </p>
-<p> </p>
 <p> </p>
 
 <p> </p>
@@ -43,11 +38,16 @@
 <p> </p>
 
 <p> </p>
-
-
-<h2 id="3final关键字">3、 </h2>
+<p> </p>
+<p> </p>
+<p> </p>
 
 <p> </p>
+
+
+<h2 id="3final关键字">3、 开机安装</h2>
+
+<p> 点击files下的三角图标，开机-OK——OK——输入Linux text，回车——左右键，tab键选择OK与skip，选中的为蓝底，选中skip（表示不需要检测）——OK，回车——English，OK——US，OK——在第二行的括号中用tab选中后出现*，表示不用序列号，OK——skip——yes——选中 remove all partition on select driver and create defaultTayout     SDA.8189MB（VMware VMware virtual），OK——yes——yes——选中uvlogvo100 6080M exts/ ,ok——OK——OK——设置第三方管理软件密码——OK——OK——OK——yes——选中前两个，括号内有*，(*)activate in boot  (*)enable ipv4 suppork ,ok——（*）dynayle ip configuation dhcp（动态获得IP地址），OK——OK——选择时钟，Asia/shanghai,OK——设置管理员密码，OK——在此位置，先建立一个快照，以便于当建立数据库时返回，退出全屏，点击VM——snapshot——snapshotmanager——takesnapshot...——name：install；description：software：点击 点击snapshot，close，OK——屏幕显示的是日志存储路径，OK——成功后弹出界面，点击Reboot，重启，等待几分钟——进入用户配置界面 选择Firewals configuration 防火墙配置到最低级别 runtool——tab和空格同时选中，（*）disabled，SELinux中选择disable，OK——选中第一个 authentication，exit——转至登录界面，回车，输入密码，此时屏幕不会有任何显示，但确实输入了密码，点击回车，进入命令界面，成功</p>
  
 <h4>其它文章：</h4> 
   <li><a href="https://liruida.github.io/webHTML.html
