--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -27,8 +27,22 @@
                 <p>1.5.图层面板设置</p>
 </h3>
 
-<p>
-  </p>
+<p>图层的基本概念:图层的学习包括两个部分，第一是菜单栏上的图层菜单，第二是面板栏的图层面板，先建立一个文档，先了解一下图层面板，选择不同的类型可以搜索图层和过滤图层，正常选项是图层混合模式的选项，旁边不透明度是图层透明度的设置，锁定选项提供了四种不同的锁定方式，填充是对图像像素填充度的调节，在图层列表里可以列出所有的图层，图层是按上下叠加的次序来排列的，列表的下方还有一栏按钮，第一个是链接图层按钮，第二个是图层样式按钮，第三个是添加蒙版按钮，第四个是添加调整图层按钮，第五个是创建新组按钮，第六个是创建新图层按钮，第七个是删除按钮。面板的右上角，有个面板菜单按钮，也可以找到相关功能。</p>
+
+<p>什么是图层，用途是什么，图层简单来说就是图层的层次，一个空白图层就像是一个透明胶片，可以很方便的单独调整和修改图层，图层分为几个类型:普通图层，背景图层，智能对象图层，调整图层，填充图层，视频图层，矢量图层，3D图层，文字图层，不同类型的图层，都包含有不同的功能个属性，这一节来讲图层通用的查看和操作方式，认识图层，背景图层在最下方，各图层形态见下图。
+</p>
+<p><img src="https://github.com/liruida/cangku1/blob/master/21.jpg?raw=true" width="500" height="550" /></p>
+<p><img src="https://github.com/liruida/cangku1/blob/master/22.jpg?raw=true
+" width="500" height="550" /></p>
+<p><img src="https://github.com/liruida/cangku1/blob/master/22.jpg?raw=true" width="500" height="550" /></p>
+
+<p>图层的基本操作，如何建立普通图层，点击创建新图层就可以了，双击文字可以重命名，只有双击文字才能修改名字，否则会弹出图层样式窗口。另外也可以在菜单栏的图层菜单新建图层，可以修改图层名字，可以选择图层的识别颜色，便于识别和分类图层，并不是图层上面像素的颜色，可以选择图层混合模式，设置图层的不透明度，普通图层就是透明图层，也可以在图层上右击选择颜色。
+</p>
+<p>接下来要讲的是图层的选择，隐藏，显示，移动，复制和删除，打开一个含有图层的pzd文件，点击图层，可以选择图层，图层会变蓝以突出显示，可以结合ctrl+shift键，一次选择多个图层，点击图层左边小眼睛，来打开和关闭图层像素的显示，隐藏得图层只是被隐藏了，图层和像素并没有丢失，在存jpg或者其他最终格式的图像的时候，隐藏图层不显示，可以通过快捷键隐藏目标图层以为的图层，快捷键为alt，可以拖拽图层，来改变图层上下的次序，图层上下的次序改变后，图画上的叠加次序也就发生了变化了。ctrl加左中括号，可以把选中的图层向下移动一层，ctrl加右中括号，可以把选中的图层向上移动一层，ctrl加shift加左中括号，把选中的图层直接移动到最下方.</p>
+<p>图层菜单中的排列选项，找到相应的命令，也可以移动，关于复制，图层菜单上的复制命令可以复制图层，在这里可以复制的图层改名字，可以把复制的图层放到新建图层里面，也可以在原文件理复制，按住alt键，来拖拽某个图层也可以复制图层，鼠标拖拽的位置是位置，也可以复制多个图层，拖拽图层，把它拖拽到新建图层按钮上也可以复制图层，这样复制的图层会在原图层的上方，快捷键为ctrl加j，也可以对多个图层来进行复制，ctrl加j，虽然看上去像是在复制，其实是一个新建的过程，图层菜单里面的新建命令中找到，叫座通过拷贝得图层，意思是通过对下方图层的拷贝新建一个下方图层一样的图层，当图层结合了选区，ctrl加j的功能，会更加全面得体现出来，有了选区，通过剪切的图层，也就可以使用了，ctrl加c是不能复制图层的在ps里，ctrl加c必须要结合选区，来复制像素，在粘贴的时候会新建一个图层来存放这些像素，最后来讲删除图层，图层面板下面的垃圾桶就是删除图层，也可以拖拽图层到垃圾桶进行删除，还可以右击图层，点击删除命令，来删除图层，最为快捷的方法，按下delete，图层就直接被删除了。
+我们再来看一下图层面板的一些设置，点击面板右上方菜单，选择面板选项，可以修改缩览图的大小和内容区域，对于选项讲拷贝添加到拷贝的图层和组，含义是复制的新图层会自动加上副本字样，取消勾选则不会加
+
+ </p>
 
 
 
