--- a/webCSS.html
+++ b/webCSS.html
@@ -5,19 +5,32 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>本博客包含以下内容 有待书写</p>
+   <p>本博客包含主要讲述网页用CSS布局方法/p>
 
 <ol>
-<li> </li>
-<li> </li>
-<li> </li>
+<li> 浮动</li>
+<li> 定位</li>
+<li> 实战技巧</li>
 
 </ol>
 
 
 
-<h2 id="1基本定义">1、 </h2>
+<h2 id="1基本定义">1、 浮动</h2>
+<p> CSS布局需要借助div双标签块级标签进行布局，区分不同div则需要借助3种选择器实现</p>
 
+  <p>首先在布局时将一个大页面分为上中下三个部分，代码如下：</br><head>
+<link href="{CSS_PATH}hezhong/css/erweima.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>河北中学</title>
+<link href="{CSS_PATH}hezhong/css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="{JS_PATH}hezhong/js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="{JS_PATH}hezhong/js/solideForK13-min.js"></script>
+<script type="text/javascript" src="{JS_PATH}hezhong/js/ad_pic.js"></script>
+ </p>
+
+<p> </p>
+<p> </p>
 
 
 <h3 id="继承"> </h3>
