--- a/webCSS.html
+++ b/webCSS.html
@@ -26,7 +26,7 @@
 <link href="{CSS_PATH}hezhong/css/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="{JS_PATH}hezhong/js/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="{JS_PATH}hezhong/js/solideForK13-min.js"></script>
-<script type="text/javascript" src="{JS_PATH}hezhong/js/ad_pic.js"></script>-->
+<script type="text/javascript" src="{JS_PATH}hezhong/js/ad_pic.js"></script>
  </p>
 
 <p> </p>
