--- a/webCSS.html
+++ b/webCSS.html
@@ -19,18 +19,39 @@
 <h2 id="1基本定义">1、 浮动</h2>
 <p> CSS布局需要借助div双标签块级标签进行布局，区分不同div则需要借助3种选择器实现</p>
 
-  <p>首先在布局时将一个大页面分为上中下三个部分，代码如下：</br>//<head>
-<link href="{CSS_PATH}hezhong/css/erweima.css" rel="stylesheet" type="text/css" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>河北中学</title>
-<link href="{CSS_PATH}hezhong/css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="{JS_PATH}hezhong/js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="{JS_PATH}hezhong/js/solideForK13-min.js"></script>
-<script type="text/javascript" src="{JS_PATH}hezhong/js/ad_pic.js"></script>
- </p>
+  <p>首先在布局时将一个大页面分为上中下三个部分，代码见下图//<html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      <style type="text/css">
+         #warp{
+             width:1005px;
+             heigth:800px;
+             border:1px solid #ccc;
+             margin:0 auto;
+         }
+  
+         #top{
+             width:1005px;
+             heigth:200px;
+             border:solid #f00;
 
-<p> </p>
-<p> </p>
+         }
+          #content{
+             width:1005px;
+             heigth:600px;
+             border:;
+         }
+</style>
+</head>
+<body>
+        <div id="warp">
+           <div id="top"></div>
+           
+//</p>
+
+<p>代码解释:border：边框像素1像素，实线，颜色；margin：0，表示上下边框为0，auto表示左右自动设置，因为浏览器是默认左对齐的，如此设置后保证整体div居中</p>
+<p> 底部div铺满了整个浏览器，所以它在整体div的外面</p>
 
 
 <h3 id="继承"> </h3>
