--- a/webCSS.html
+++ b/webCSS.html
@@ -19,7 +19,7 @@
 <h2 id="1基本定义">1、 浮动</h2>
 <p> CSS布局需要借助div双标签块级标签进行布局，区分不同div则需要借助3种选择器实现</p>
 
-  <p>首先在布局时将一个大页面分为上中下三个部分，代码见下图//**<html>
+  <p>首先在布局时将一个大页面分为上中下三个部分，代码见下图<TEXTAREA name="example2" "><html>
    <head>
       <title></title>
       <meta charset="utf-8" />
@@ -47,8 +47,8 @@
 <body>
         <div id="warp">
            <div id="top"></div>
-           
-**//</p>
+           </TEXTAREA>
+</p>
 
 <p>代码解释:border：边框像素1像素，实线，颜色；margin：0，表示上下边框为0，auto表示左右自动设置，因为浏览器是默认左对齐的，如此设置后保证整体div居中</p>
 <p> 底部div铺满了整个浏览器，所以它在整体div的外面</p>
