--- a/webCSS.html
+++ b/webCSS.html
@@ -19,7 +19,7 @@
 <h2 id="1基本定义">1、 浮动</h2>
 <p> CSS布局需要借助div双标签块级标签进行布局，区分不同div则需要借助3种选择器实现</p>
 
-  <p>首先在布局时将一个大页面分为上中下三个部分，代码见框内
+  <p>首先在布局时将一个大页面分为上中下三个部分，代码见框内（点击代码区域可变为蓝色）
 </p>
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly ><html>
    <head>
