--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -39,7 +39,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;图层的基本操作，如何建立普通图层，点击创建新图层就可以了，双击文字可以重命名，只有双击文字才能修改名字，否则会弹出图层样式窗口。另外也可以在菜单栏的图层菜单新建图层，可以修改图层名字，可以选择图层的识别颜色，便于识别和分类图层，并不是图层上面像素的颜色，可以选择图层混合模式，设置图层的不透明度，普通图层就是透明图层，也可以在图层上右击选择颜色。
 </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;接下来要讲的是图层的选择，隐藏，显示，移动，复制和删除，打开一个含有图层的pzd文件，点击图层，可以选择图层，图层会变蓝以突出显示，可以结合ctrl+shift键，一次选择多个图层，点击图层左边小眼睛，来打开和关闭图层像素的显示，隐藏得图层只是被隐藏了，图层和像素并没有丢失，在存jpg或者其他最终格式的图像的时候，隐藏图层不显示，可以通过快捷键隐藏目标图层以为的图层，快捷键为alt，可以拖拽图层，来改变图层上下的次序，图层上下的次序改变后，图画上的叠加次序也就发生了变化了。ctrl加左中括号，可以把选中的图层向下移动一层，ctrl加右中括号，可以把选中的图层向上移动一层，ctrl加shift加左中括号，把选中的图层直接移动到最下方.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;图层菜单中的排列选项，找到相应的命令，也可以移动，关于复制，图层菜单上的复制命令可以复制图层，在这里可以复制的图层改名字，可以把复制的图层放到新建图层里面，也可以在原文件理复制，按住alt键，来拖拽某个图层也可以复制图层，鼠标拖拽的位置是位置，也可以复制多个图层，拖拽图层，把它拖拽到新建图层按钮上也可以复制图层，这样复制的图层会在原图层的上方，快捷键为ctrl加j，也可以对多个图层来进行复制，ctrl加j，虽然看上去像是在复制，其实是一个新建的过程，图层菜单里面的新建命令中找到，叫座通过拷贝得图层，意思是通过对下方图层的拷贝新建一个下方图层一样的图层，当图层结合了选区，ctrl加j的功能，会更加全面得体现出来，有了选区，通过剪切的图层，也就可以使用了，ctrl加c是不能复制图层的在ps里，ctrl加c必须要结合选区，来复制像素，在粘贴的时候会新建一个图层来存放这些像素，最后来讲删除图层，图层面板下面的垃圾桶就是删除图层，也可以拖拽图层到垃圾桶进行删除，还可以右击图层，点击删除命令，来删除图层，最为快捷的方法，按下delete，图层就直接被删除了。
+<p>&nbsp;&nbsp;&nbsp;&nbsp;图层菜单中的排列选项，找到相应的命令，也可以移动，关于复制，图层菜单上的复制命令可以复制图层，在这里可以复制的图层改名字，可以把复制的图层放到新建图层里面，也可以在原文件理复制，按住alt键，来拖拽某个图层也可以复制图层，鼠标拖拽的位置是位置，也可以复制多个图层，拖拽图层，把它拖拽到新建图层按钮上也可以复制图层，这样复制的图层会在原图层的上方，快捷键为ctrl加j，也可以对多个图层来进行复制，ctrl加j，虽然看上去像是在复制，其实是一个新建的过程，图层菜单里面的新建命令中找到，叫座通过拷贝得图层，意思是通过对下方图层的拷贝新建一个下方图层一样的图层，当图层结合了选区，ctrl加j的功能，会更加全面得体现出来，有了选区，通过剪切的图层，也就可以使用了，ctrl加c是不能复制图层的在ps里，ctrl加c必须要结合选区，来复制像素，在粘贴的时候会新建一个图层来存放这些像素，最后来讲删除图层，图层面板下面的垃圾桶就是删除图层，也可以拖拽图层到垃圾桶进行删除，还可以右击图层，点击删除命令，来删除图层，最为快捷的方法，按下delete，图层就直接被删除了。那就是空格键，按住空格键不松可以直接转换为抓手工具，松开空格键会返回到当前工具，不管当前是什么工具，按空格键都会转换为抓手工具，这就是我们移动视图最常用的方法。
 我们再来看一下图层面板的一些设置，点击面板右上方菜单，选择面板选项，可以修改缩览图的大小和内容区域，对于选项讲拷贝添加到拷贝的图层和组，含义是复制的新图层会自动加上副本字样，取消勾选则不会加
 
  </p>
@@ -50,11 +50,11 @@
 <h3 id="继承"><p>抓手工具</p>
                 <p>缩放工具
 </p>
-                <p>相关快捷命令</p>
+                
 </h3>
-<p></p>
+<p>对视图的操作，平移和缩放，查看画面的方式，在工作信息栏左下角改变数值可以改变画面的大小，放大，缩小，旋转，平移，只是对视图进行调整，并不是对图像的像素进行修改，了解抓手工具和缩放工具，工具栏下面小手一样的图标是抓手工具，选择抓手工具，鼠标在画面就会变成一个小手，而这个小手就是用来移动画面视图的，在画面上点击拖动，就可以自由的移动画面了。菜单栏的下方是选项栏，是对工具参数进行调节，选择滚动所有窗口是对打开的所有图像进行移动，实际像素，将图像缩放为1:1.适合屏幕，将图像缩放为屏幕大小，填充屏幕，最大限度把屏幕填满。下面要讲的是更快捷和最常用的方式，</p>
 
-<p></p>
+<p>那就是空格键，按住空格键不松可以直接转换为抓手工具，松开空格键会返回到当前工具，不管当前是什么工具，按空格键都会转换为抓手工具，这就是我们移动视图最常用的方法。</p>
 
 <p></p>
 <p></p>
