--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -52,9 +52,9 @@
 </p>
                 
 </h3>
-<p>对视图的操作，平移和缩放，查看画面的方式，在工作信息栏左下角改变数值可以改变画面的大小，放大，缩小，旋转，平移，只是对视图进行调整，并不是对图像的像素进行修改，了解抓手工具和缩放工具，工具栏下面小手一样的图标是抓手工具，选择抓手工具，鼠标在画面就会变成一个小手，而这个小手就是用来移动画面视图的，在画面上点击拖动，就可以自由的移动画面了。菜单栏的下方是选项栏，是对工具参数进行调节，选择滚动所有窗口是对打开的所有图像进行移动，实际像素，将图像缩放为1:1.适合屏幕，将图像缩放为屏幕大小，填充屏幕，最大限度把屏幕填满。下面要讲的是更快捷和最常用的方式，</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;对视图的操作，平移和缩放，查看画面的方式，在工作信息栏左下角改变数值可以改变画面的大小，放大，缩小，旋转，平移，只是对视图进行调整，并不是对图像的像素进行修改，了解抓手工具和缩放工具，工具栏下面小手一样的图标是抓手工具，选择抓手工具，鼠标在画面就会变成一个小手，而这个小手就是用来移动画面视图的，在画面上点击拖动，就可以自由的移动画面了。菜单栏的下方是选项栏，是对工具参数进行调节，选择滚动所有窗口是对打开的所有图像进行移动，实际像素，将图像缩放为1:1.适合屏幕，将图像缩放为屏幕大小，填充屏幕，最大限度把屏幕填满。下面要讲的是更快捷和最常用的方式，</p>
 
-<p>那就是空格键，按住空格键不松可以直接转换为抓手工具，松开空格键会返回到当前工具，不管当前是什么工具，按空格键都会转换为抓手工具，这就是我们移动视图最常用的方法。</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;那就是空格键，按住空格键不松可以直接转换为抓手工具，松开空格键会返回到当前工具，不管当前是什么工具，按空格键都会转换为抓手工具，这就是我们移动视图最常用的方法。</p>
 
 <p></p>
 <p></p>
