--- a/ps3xuanqu.html
+++ b/ps3xuanqu.html
@@ -77,8 +77,8 @@
   <li><a href="https://liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
   
-  <li><a href="http://www.w3school.com.cn/ 
-">w3c官网发布标签</a></li>
+  <li><a href="https://liruida.github.io/yubei1.html 
+">js效果图</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
