--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -78,6 +78,8 @@
  <h4>其它文章：</h4> 
   <li><a href="https://ke.qq.com/webcourse/index.html#course_id=174436&term_id=100204584&taid=1027618170382692&vid=b1414hhf6ll
 ">说明：本PS教程引用的视频教程 </a></li> 
+  <li><a href="https://liruida.github.io/ps3xuanqu.html
+ ">PS3选区操作</a></li>
   <li><a href="https://liruida.github.io/webHTML.html
  ">web开发HTML要点总结</a></li>
    <li><a href="https://liruida.github.io/webCSS.html
