--- a/ps3xuanqu.html
+++ b/ps3xuanqu.html
@@ -76,7 +76,8 @@
 ">web开发CSS要点总结</a></li>
   <li><a href="https://liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
-  
+  <li><a href="http://www.acfun.cn/v/ac2755370 
+">零基础乐理教程</a></li>
   <li><a href="https://liruida.github.io/yubei1.html 
 ">js效果图</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
