--- a/ps3xuanqu.html
+++ b/ps3xuanqu.html
@@ -78,8 +78,12 @@
 ">PS层次2~~图层操作</a></li>
   <li><a href="http://www.acfun.cn/v/ac2755370 
 ">零基础乐理教程</a></li>
+   <li><a href="http://blog.sina.cn/dpool/blog/s/blog_621889960102w0i1.html?md=gd
+">音律上为什么是取“1、2、3、4、5、6、7”7个音符</a></li>
+  
   <li><a href="https://liruida.github.io/yubei1.html 
 ">js效果图</a></li>
+  
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
