--- a/ps3xuanqu.html
+++ b/ps3xuanqu.html
@@ -63,13 +63,45 @@
 <p> </p>
 
 <p> </p>
- <h5 id="继承"> </h5>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
+ <h5 id="继承"> 4.选区特征</h5>
+  <ol>
+<li>选区的常见编辑命令</li>
+<li> 选区透明度了解
+</li>
+<li>选区透明度了解</li>
 
-<p> </p>
+</ol>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;本节学习现有选区的编辑调整，鼠标进入选区变白箭头后，可以移动选区，选区可以多文档间移动，鼠标拖拽至目标文档标签，激活文档后拖入，图层在多文档间移动的快捷键shift，利用前面讲到的套索工具，画一个三角形，鼠标移动到选区里面，变成白箭头，移动选区，拖动选区到文档名为空白02，按住shift松手，文档01的三角会保持原位拖拽到02，前提是两个文档大小的一样。如果新建一个不大一样文档，重复此操作，三角会自动跑到了新建的文档中心，如果目标文档有选区，三角会自动跑到选区中央。 </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;下面讲选区的变换，利用多边形套索工具制作一个选区，鼠标右击找到变换区，或在选择菜单中找到变换选区，此时出现的控杆控点跟前面讲到的变换控件是一样的，拖动控点对选区进行变形，控杆也可以这样操作，鼠标右键，打开右键菜单可以对变形进行很多操作，组合快捷键或调整上方选项栏参数对选区进行准确调节，变换完后，点击对号，确定变换结束。如果选区变换不满意可以按esc键取消。 </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;不单单要学习选区的变换，最重要的要学习图像的变换，先了解选区的基本操作选区中常用命令，反向命令，有张图，想抠出主体，利用魔棒或快速选择工具选取背景，选取背景后，选择反向，留住主体，右键菜单，右击，选择反向，选区中选择背景，点击delete，背景被删除。 </p>
+<p> &nbsp;&nbsp;&nbsp;&nbsp;不单单要学习选区的变换，最重要的要学习图像的变换，先了解选区的基本操作选区中常用命令，反向命令，有张图，想抠出主体，利用魔棒或快速选择工具选取背景，选取背景后，选择反向，留住主体，右键菜单，右击，选择反向，选区中选择背景，点击delete，背景被删除。</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;选区的另一个特征是透明度，两个外形一样的选区，透明度却可以不同，通过填充颜色，来看出两个选区透明度的差别，新建图层，填充前景色，快捷键alt加delete，同样填充百分百的白色，填充效果却不同，关掉背景图层后发现，左边填充的是半透明的，能透出透明网络，自然也能透出图层对象，这里的半透明效果，跟刚才的羽化概念是接近的，区别在于方框是均匀的半透明颜色，而羽化是边缘过度的。制作半透明选区，打开通道面板，新建通道，在通道里制作一个选区，填充灰色，Ctrl加d取消选区，在通道面板点击按钮，将通道作为选区载入，这里的选区跟刚才的选区区别在于存在透明度，通道和选区是存在密切联系的，选区是有透明度的，可以多次按下快捷键alt加delete.，填充前景颜色。在通道面板新建一个alpha通道创建一个选区，填充灰色，取消选区，点击通道面板的载入选区按钮，像素不大于百分之五十的选择，选区可以存在，但是不会显示出来，利用多边形套索，制作一个选区，快捷键shift加f6羽化，羽化后选区边缘发生了变化，新建图层，填充颜色，高于百分之五十的在蚂蚁线里面，低于的则在蚂蚁线外面 </p>
+<p> &nbsp;&nbsp;&nbsp;&nbsp;了解了选区透明度的特性，下面来了解选区命令，利用魔棒工具，在图新娘的婚纱上点选婚纱，在选区上右击，选择扩大选取。下一个命令，选区相似，先取消选区，利用魔棒工具，选择一块绿草地，利用选择菜单，找到选区相似，这样所有和刚才绿草地相似的颜色就被选中了。</p
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;再次点击选取相似命令，这样选区会进一步扩大，选取相似跟魔棒工具选项栏的连续功能很像，色彩范围命令，也可以实现这个功能。
+  </p>
+ <p>&nbsp;&nbsp;&nbsp;&nbsp;调整边缘功能可以细化选区，完美抠图。边界命令可以让边界变成选区，平滑命令可以平滑尖角，扩展和收缩来对选区进行周边缩放，选区可以转换为路径，路径是重要的辅助工具，是矢量原素。 <p> </p>  </p> 
+   <p> </p> 
+   <p> </p> 
+  
+  
+  <h6 id="继承"> 4.历史记录操作</h6>
+  <ol>
+<li>选区的常见编辑命令</li>
+<li> 历史记录面板
+</li>
+<li>历史快捷键</li>
+<li><li>历史快照</li></li>
+    <li>历史面板设置</li>
+    <li>历史记录画笔工具组</li>
+</ol>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;当选区出现错误时，使用历史工具返回，找到窗口下的历史记录点击后出现历史记录面板，最上方为原始图片，也可以叫做快照栏，下面出现的操作步骤栏，为历史记录栏，面板下方还有三个按钮，面板上方为早期记录，下方为最近的记录，删除中间操作记录，下面的所有记录也就被删除了。 </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;编辑菜单，还原移动命令，ctrl加z只能返回一步，多次点击后退一步或ctrl加alt加z命令可以返回多步，编辑菜单，前进一步，快捷键ctrl加shift加z，修改qq里的ctrl加shift加z快捷键，以免与ps的产生冲突。 </p>
+<p> &nbsp;&nbsp;&nbsp;&nbsp;历史工具下的从当前状态创建新文档按钮，原色通道用灰度图像表示，示意发光强弱，眼睛在闪光 双击查看原图灯作用下会扩张，儿毛细血管会呈现红色，通过历史面板可以找到刚才状态，点击创建新文档，形成两个不同的文档。把原始图回归到最近状态，进行继续编辑，这个功能可以很方便的留下步骤备份。</p>
+<p> &nbsp;&nbsp;&nbsp;&nbsp;历史工具下的从当前状态创建新文档按钮，原色通道用灰度图像表示，示意发光强弱，眼睛在闪光  灯作用下会扩张，儿毛细血管会呈现红色，通过历史面板可以找到刚才状态，点击创建新文档，形成两个不同的文档。把原始图回归到最近状态，进行继续编辑，这个功能可以很方便的留下步骤备份。</p>
+
+<p> &nbsp;&nbsp;&nbsp;&nbsp;工具组最后一个工具是红眼工具，使用红眼工具在红眼上框一下就可以了。这样原先记录将会消除，历史面板重新记录。在扩展模式下，做出选区移动后会复制出选区里的内容，通过选项可以修改蒙版方式和显示区域颜色类型，快照不会被新操作顶走也不会保存在文件里。移动代表的是移走，扩展代表的是复制，历史记录是暂存的信息，不会被存储的。右键出现历史记录选项，勾选第一个选项后，会自动创建快照，存储时自动创建快照，修改图像后，ctrl加s保存，快照栏会自动存储，命名新快照。允许非线性历史记录，对图像进行操作，删除过往步骤后，此步骤之后历史记录也会被删除，勾选允许非线性历史记录后，会特定删除记录。默认显示新快照对话框，点击它狗自动弹出选项窗口。</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;在工具栏中找到历史记录画笔工具，此工具基于画笔形式找回历史记录，快捷键y。历史画笔就起到了恢复原始图片区域的作用。它的设置符合画笔的通用设置。重新添加滤镜编辑，滤镜就是可以快速对画面进行特殊效果的处理，选择滤镜库，调节龟裂缝参数，出现特殊效果，图标表示记录状态为历史记录画笔的历史源，历史源并不是固定的，这样恢复后就不是原始的图像，而是加工后的图像，通过不同历史源和画笔效果产生特别的画面效果，历史记录面板的效果，通过蒙版也可以做出来。 </p> 
+<p>&nbsp;&nbsp;&nbsp;&nbsp;历史记录艺术画笔工具，内容感知移动工具比修补工具更加智能和简单。在适应里控制边缘融合的效果，在移动模式下只需要画出选区，移动就可以了。ps的红眼工具就会快速的把红眼消除，图层是ps最重要的部分，图层锁定即是对图层或图层部分进行操作保护，锁定透明像素，就是禁止对透明区域进行操作，</p> 
 <h4>其它文章：</h4> 
   <li><a href="https://liruida.github.io/webCSS.html
  
@@ -80,7 +112,8 @@
 ">零基础乐理教程</a></li>
    <li><a href="http://blog.sina.cn/dpool/blog/s/blog_621889960102w0i1.html?md=gd
 ">音律上为什么是取“1、2、3、4、5、6、7”7个音符</a></li>
-  
+  <li><a href="https://liruida.github.io/ps4huabi.html
+">ps5画笔和填充</a></li>
   <li><a href="https://liruida.github.io/yubei1.html 
 ">js效果图</a></li>
   
