--- a/webCSS.html
+++ b/webCSS.html
@@ -21,35 +21,88 @@
 
   <p>首先在布局时将一个大页面分为上中下三个部分，代码见框内（点击代码区域可变为蓝色）
 </p>
-<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly ><html>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+  <html>
    <head>
       <title></title>
       <meta charset="utf-8" />
       <style type="text/css">
          #warp{
              width:1005px;
-             heigth:800px;
+             height:800px;
              border:1px solid #ccc;
              margin:0 auto;
          }
   
          #top{
              width:1005px;
-             heigth:200px;
-             border:solid #f00;
+             height:200px;
+             border:1px solid #f00;
 
          }
           #content{
              width:1005px;
-             heigth:600px;
-             border:;
+             height:600px;
+             border:1px;
          }
+          #footer{
+             width:100%;
+             height:68px;
+             border:1px solid #00f;
+         }
+
 </style>
 </head>
 <body>
         <div id="warp">
            <div id="top"></div>
+           <div id="content"></div>
+        </div>
+       <div id="footer"></div>
+       </body>
+</html>
+
            </TEXTAREA>
+  代码效果图：<html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      <style type="text/css">
+         #warp{
+             width:1005px;
+             height:800px;
+             border:1px solid #ccc;
+             margin:0 auto;
+         }
+  
+         #top{
+             width:1005px;
+             height:200px;
+             border:1px solid #f00;
+
+         }
+          #content{
+             width:1005px;
+             height:600px;
+             border:1px;
+         }
+          #footer{
+             width:100%;
+             height:68px;
+             border:1px solid #00f;
+         }
+
+</style>
+</head>
+<body>
+        <div id="warp">
+           <div id="top"></div>
+           <div id="content"></div>
+        </div>
+       <div id="footer"></div>
+       </body>
+</html>
+  
 <p>代码解释:border：边框像素1像素，实线，颜色；margin：0，表示上下边框为0，auto表示左右自动设置，因为浏览器是默认左对齐的，如此设置后保证整体div居中</p>
 <p> 底部div铺满了整个浏览器，所以它在整体div的外面</p>
 
