--- a/webCSS.html
+++ b/webCSS.html
@@ -43,7 +43,7 @@
           #content{
              width:1005px;
              height:600px;
-             border:1px;
+             border:1px solid #eee;
          }
           #footer{
              width:100%;
@@ -84,7 +84,7 @@
           #content{
              width:1005px;
              height:600px;
-             border:1px;
+             border:1px solid #eee;
          }
           #footer{
              width:100%;
